--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ appexternal.endpoint.post.customers = ${appexternal.url}/api/customer/
 
 appexternal.endpoint.get.ratings = ${appexternal.url}/api/rating/
 appexternal.endpoint.post.ratings = ${appexternal.url}/api/rating/
+
+appexternal.endpoint.get.complaints = ${appexternal.url}/api/complaint/
+appexternal.endpoint.post.complaints = ${appexternal.url}/api/complaint/
